--- a/2024工程日志.md
+++ b/2024工程日志.md
@@ -10,7 +10,9 @@
 
 # 自瞄系统
 
-*由**黄敏达**独立开发并撰写日志*
+- 系统本体 *由**黄敏达**独立开发并撰写日志*
+
+- 训练数据集由机器人室成员共同收集、标注
 
 ## 日志
 
@@ -108,27 +110,31 @@ yolo部署
 
 增量备份了系统
 
-## 打卡
+### 2024/1/17
 
-| 日期      | 黄敏达                 |      |      |      |      |      |
-| --------- | ---------------------- | ---- | ---- | ---- | ---- | ---- |
-| 2024/1/8  | 16:30-20:00            |      |      |      |      |      |
-| 2024/1/9  | 16:30-19:52            |      |      |      |      |      |
-| 2024/1/10 | 16:50-19:45            |      |      |      |      |      |
-| 2024/1/11 | 居家，整天都在敲代码   |      |      |      |      |      |
-| 2024/1/12 | 10:50-12:55, 3:15-7:00 |      |      |      |      |      |
-| 2024/1/13 | 居家                   |      |      |      |      |      |
-| 2024/1/14 | \                      |      |      |      |      |      |
-| 2024/1/15 | 14:00-19:00            |      |      |      |      |      |
-| 2024/1/16 | 12:00-18:30            |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
-|           |                        |      |      |      |      |      |
+编译安装了ffmpeg 3.4.9
+
+# 打卡
+
+| 日期      | 黄敏达                   |      |      |      |      |      |
+| --------- | ------------------------ | ---- | ---- | ---- | ---- | ---- |
+| 2024/1/8  | 16:30-20:00              |      |      |      |      |      |
+| 2024/1/9  | 16:30-19:52              |      |      |      |      |      |
+| 2024/1/10 | 16:50-19:45              |      |      |      |      |      |
+| 2024/1/11 | 居家，整天都在敲代码     |      |      |      |      |      |
+| 2024/1/12 | 10:50-12:55, 3:15-7:00   |      |      |      |      |      |
+| 2024/1/13 | 居家                     |      |      |      |      |      |
+| 2024/1/14 | \                        |      |      |      |      |      |
+| 2024/1/15 | 14:00-19:00              |      |      |      |      |      |
+| 2024/1/16 | 12:00-18:30              |      |      |      |      |      |
+| 2024/1/17 | 12:15-13:45, 16:40-20:00 |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
+|           |                          |      |      |      |      |      |
 
