--- a/2024工程日志.md
+++ b/2024工程日志.md
@@ -114,6 +114,14 @@ yolo部署
 
 编译安装了ffmpeg 3.4.9
 
+### 2024/1/18
+
+编译安装了 libav-12.3
+
+注意：***回档到2024/1/16***的备份
+
+删除了ffmpeg 6.0及大疆视频解码器前置，准备再次尝试降级ffmpeg
+
 # 打卡
 
 | 日期      | 黄敏达                   |      |      |      |      |      |
@@ -127,8 +135,8 @@ yolo部署
 | 2024/1/14 | \                        |      |      |      |      |      |
 | 2024/1/15 | 14:00-19:00              |      |      |      |      |      |
 | 2024/1/16 | 12:00-18:30              |      |      |      |      |      |
-| 2024/1/17 | 12:15-13:45, 16:40-20:00 |      |      |      |      |      |
-|           |                          |      |      |      |      |      |
+| 2024/1/17 | 12:15-13:45, 16:40-20:45 |      |      |      |      |      |
+| 2024/1/18 | 12:15-19:30              |      |      |      |      |      |
 |           |                          |      |      |      |      |      |
 |           |                          |      |      |      |      |      |
 |           |                          |      |      |      |      |      |
