--- a/2024工程日志.md
+++ b/2024工程日志.md
@@ -112,15 +112,33 @@ yolo部署
 
 ### 2024/1/17
 
-编译安装了ffmpeg 3.4.9
+准备编译DJI的视频流解码包，但持续报错，怀疑是ffmpeg6.0以后弃用 avcodec_register_all 导致的
+
+![image-20240119113021630](Picture/2024工程日志/image-20240119113021630-1705635027921-1.png)
+
+编译安装了ffmpeg 3.4.9，该版本支持avcodec_register_all，但仍然报错
 
 ### 2024/1/18
 
-编译安装了 libav-12.3
+发现示范代码中构建的解码器在github上有[仓库](https://github.com/DaWelter/h264decoder)，上次更新于2年前，下载代码并构建，报错
 
-注意：***回档到2024/1/16***的备份
+![image-20240119114859806](Picture/2024工程日志/image-20240119114859806.png)
 
-删除了ffmpeg 6.0及大疆视频解码器前置，准备再次尝试降级ffmpeg
+AV_CODEC_CAP_TRUNCATED应该在ffmpeg6.0中弃用，环境中的版本低于6.0，怀疑AV_CODEC_CAP_TRUNCATED在其他包中也存在
+
+发现AV_CODEC_CAP_TRUNCATED也可能是libav提供的，编译安装了 libav-12.3，仍然报错
+
+由于持续报错，决定***回档到2024/1/16的备份***寻找新的解决方案
+
+怀疑是DJI解码器前置中ffmpeg以外的包导致的问题，删除了ffmpeg 6.0及大疆视频解码器前置
+
+### 2024/1/19
+
+安装了libopus-dev，libavcodec-dev=7:4.4.1-3ubuntu5**（avcodec_register_all由该包提供）**，libswscale-dev=7:4.4.1-3ubuntu5，**成功解决了构建失败的问题**
+
+成功在香橙派上使用RM摄像头对画面进行推理，但是速度仍需改进
+
+![image-20240119190704424](Picture/2024工程日志/image-20240119190704424.png)
 
 # 打卡
 
@@ -137,7 +155,7 @@ yolo部署
 | 2024/1/16 | 12:00-18:30              |      |      |      |      |      |
 | 2024/1/17 | 12:15-13:45, 16:40-20:45 |      |      |      |      |      |
 | 2024/1/18 | 12:15-19:30              |      |      |      |      |      |
-|           |                          |      |      |      |      |      |
+| 2024/1/19 | 10:45-19:45              |      |      |      |      |      |
 |           |                          |      |      |      |      |      |
 |           |                          |      |      |      |      |      |
 |           |                          |      |      |      |      |      |
